--- a/.github/workflows/dev_app-scriptoai-youtube.yml
+++ b/.github/workflows/dev_app-scriptoai-youtube.yml
@@ -28,7 +28,7 @@ jobs:
           source venv/bin/activate
       
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r scripto.ai/requirements.txt  # Corrigido o caminho para o requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
@@ -50,7 +50,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write # This is required for requesting the JWT
 
     steps:
       - name: Download artifact from build job
@@ -61,18 +61,17 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
-      
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_62EDD7CF05FF446DA1555145F0C2F52F }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_8388179C96E24F818FD8B270B27A2419 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_AF381A11BCF448B6A0CE1118BA4EABAE }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: 'Deploy to Azure Web App'
         uses: azure/webapps-deploy@v3
         id: deploy-to-webapp
         with:
           app-name: 'app-scriptoai-youtube'
-          slot-name: 'Production'
-          
+          # O slot-name é opcional, remova se não estiver usando slots
+          # slot-name: 'Production'  # Remova esta linha se não estiver usando slots
