--- a/scripto.ai/.streamlit/config.toml
+++ b/scripto.ai/.streamlit/config.toml
@@ -1,10 +1,11 @@
-[theme]
-primaryColor = '#1b1464'  # Cor do tema principal (pode ajustar)
-backgroundColor = '#f0f2f6'  # Cor de fundo da aplicação
-secondaryBackgroundColor = '#ffffff'  # Cor secundária de fundo
-textColor = '#000000'  # Cor do texto
-
 [server]
 headless = true
 port = $PORT
 enableCORS = false
+
+[theme]
+primaryColor = "#8A2BE2"
+backgroundColor = "#2C2C54"
+secondaryBackgroundColor = "#1B1464"
+textColor = "#FFFFFF"
+font = "sans serif"
